<resources>
    <string name="app_name">Angumi</string>
    <string name="title_home">主页</string>
    <string name="title_collections">收藏</string>
    <string name="title_me">我</string>
    <string name="title_sign_in">登录</string>
    <string name="title_authorize">授权</string>
    <string name="title_authorizing">正在授权</string>
    <string name="title_not_now">暂不</string>
    <string name="text_sign_in_benefits">登录以管理你的收藏</string>
    <string name="toast_authorizationSucceeded">授权成功</string>
    <string name="toast_authorizationFailed">授权失败</string>
    <string name="title_sign_out">登出</string>
    <string name="desc_avatar">头像</string>
    <string name="toast_failedToLoadData">数据加载失败</string>
    <string name="title_dropped">抛弃</string>
    <string name="title_on_hold">搁置</string>
    <string name="title_collect">看过</string>
    <string name="title_wish">想看</string>
    <string name="title_do">在看</string>
    <string name="message_signInToManageCollections">登录以管理收藏</string>
    <string name="title_book">书籍</string>
    <string name="title_anime">动画</string>
    <string name="title_music">音乐</string>
    <string name="title_game">游戏</string>
    <string name="title_sanjigen">三次元</string>
    <string name="title_search">搜索</string>
    <string name="desc_search">搜索</string>
    <string name="title_progress_t">%d / %d</string>
    <string name="title_collectionSubtitle_t">%.1f分·%s</string>
    <string name="title_collectionSubtitleNoDate_t">%.1f分</string>
</resources>